<resources>
    <string name="app_name">IDReaderDemo</string>
    <string name="start">启动服务</string>
    <string name="close">关闭服务</string>
    <string name="mockData">mock数据</string>
    <string name="exit">退出系统</string>
    <string name="setting">系统设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">显示设置</string>

    <string name="pref_show_lines_title">显示行数设置</string>
    <string-array name="showLines_title">
        <item>显示一行</item>
        <item>显示二行</item>
        <item>显示三行</item>
    </string-array>
    <string-array name="showLines_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="pref_show_setting">显示配置</string>
    <string-array name="show_setting_title">
        <item>自定义输出</item>
        <item>系统输出</item>
    </string-array>
    <string-array name="show_setting_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pre_header_reader_setting">读卡设置</string>
    <string name="pre_reader_server">后台服务器设置</string>
    <string name="pre_reader_server_title">服务器地址</string>
    <string name="pre_reader_server_ipdefault">124.117.209.133</string>
    <string name="pre_reader_server_port">29092</string>
    <string name="pre_reader_serverport_title">端口</string>
    <string name="pre_reader_times">读卡时间</string>
    <string name="pre_reader_times_title">读卡时间设置</string>

    <string name="pre_header_voice_setting">声音设置</string>
    <string name="pre_voice_setting">语音播报</string>
    <string name="pre_voide_background">待机画面</string>

    <string name="pre_background_enable">启用待机画面</string>
    <string name="pre_background_enable_title">是否启用待机画面</string>
    <string name="pre_background_action">待机选择</string>
    <string-array name="pre_background_action_title">
        <item>视频</item>
        <item>音频</item>
    </string-array>
    <string-array name="pre_background_action_value">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
