<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pre_background_enable">
        <SwitchPreference
            android:key="background_enable"
            android:title="@string/pre_background_enable_title">
        </SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pre_background_action">
        <ListPreference android:title="@string/pre_background_action"
            android:key="pre_background_action"
            android:entries="@array/pre_background_action_title"
            android:entryValues="@array/pre_background_action_value"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            >
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>